@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-23T01:34:27Z",
-  "count_outdated" : 7878,
-  "uniques_outdated" : 3471,
+  "timestamp" : "2024-06-24T01:25:06Z",
+  "count_outdated" : 7911,
+  "uniques_outdated" : 3486,
   "count" : 8186,
   "uniques" : 3636,
   "clones" : [
-    {
-      "timestamp": "2024-06-09T00:00:00Z",
-      "count": 33,
-      "count_minmax": [ 33, 33 ],
-      "count_decinc": [ 0, 33 ],
-      "uniques": 15,
-      "uniques_minmax": [ 15, 15 ],
-      "uniques_decinc": [ 0, 15 ]
-    },
     {
       "timestamp": "2024-06-10T00:00:00Z",
       "count": 105,
